// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Components > CollapsibleItem > computed > active > should add -active class when item is active 1`] = `
"<div class="collapsible-item -active" name="collapsible-item"><a id="collapsible-item-header-collapsible-item" class="collapsible-header" role="tab" aria-expanded="true" aria-controls="collapsible-item-content-collapsible-item" aria-describedby="collapsible-item-content-collapsible-item" tabindex="0">
    <!-- @slot header Slot for collapsible item header content --><i class="icon"></i>
  </a>
  <transition-stub name="expand" appear="false" persisted="false" css="true">
    <div id="collapsible-item-body-collapsible-item" class="collapsible-body" role="tabpanel" aria-hidden="false" aria-labelledby="collapsible-item-header-collapsible-item">
      <div class="content">
        <!-- @slot default Slot for default collapsible item content -->
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`Components > CollapsibleItem > should render correctly 1`] = `
"<div class="collapsible-item" name="collapsible-item"><a id="collapsible-item-header-collapsible-item" class="collapsible-header" role="tab" aria-expanded="false" aria-controls="collapsible-item-content-collapsible-item" aria-describedby="collapsible-item-content-collapsible-item" tabindex="0">
    <!-- @slot header Slot for collapsible item header content --><i class="icon"></i>
  </a>
  <transition-stub name="expand" appear="false" persisted="false" css="true">
    <div id="collapsible-item-body-collapsible-item" class="collapsible-body" role="tabpanel" aria-hidden="true" aria-labelledby="collapsible-item-header-collapsible-item" style="display: none;">
      <div class="content">
        <!-- @slot default Slot for default collapsible item content -->
      </div>
    </div>
  </transition-stub>
</div>"
`;
